<resources>
    <string name="dialog_do_not_show">Do not show this message in the future.</string>
    <string name="app_name">Mānoa Scheduler</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="bt_txt_exit">Exit Application</string>
    <string name="bt_txt_pref">Schedule Preferences</string>
    <string name="bt_txt_create">Create Schedules</string>
    <string name="bt_txt_view">View Schedules</string>
    <string name="bt_txt_search">Search for Courses</string>
    <string name="dsc_mm_title">Main Menu Title Image</string>
    <string name="dsc_mm_logo">Main Menu Logo Image</string>
    <string name="bt_search">Search</string>
    <string name="txt_srch_hnt">Enter CRN or Course Name</string>
    <string name="bt_gefoc"> GE / Focus</string>
    <string name="title_activity_search"> Search for Courses</string>
    <string name="ok">OK</string>
    <string name="force_update">Refresh Course Data ⟳</string>
    <string name="cancel">Cancel</string>
    <string name="srch_title">Search for Courses</string>
    <string name="menu_gefc">Gen Ed/Focus Filter</string>
    <string name="menu_time">Start/End Time Filter </string>
    <string name="menu_fil">Show Courses by Major</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="str_panel_clear">Clear List</string>
    <string name="str_panel_delete">Delete ✕</string>
    <string name="start_chkbox">Set Earliest Start Time</string>
    <string name="end_chkbox">Set Latest End Time</string>
    <string name="str_course"> Course: </string>
    <string name="str_title"> Title: </string>
    <string name="str_crn"> CRN: </string>
    <string name="str_add"> Add Selected to Starred List </string>
    <string name="res_crn">Save CRN</string>
    <string name="res_crs">Save Course</string>
    <string name="res_prof">Professor: </string>
    <string name="res_start">Start: </string>
    <string name="res_end">End: </string>
    <string name="res_days">Days: </string>
    <string name="res_loc">Location: </string>
    <string name="res_clear">Clear Results ✕</string>
    <string name="des_clear">Clear List</string>
    <string name="des_delete">Delete</string>
    <string name="des_build">Build Schedules ✓</string>
    <string name="menu_crs_min">Set Minimum Course Count</string>
    <string name="menu_tblock">Set Time Off</string>
    <string name="str_panel_add">Add to List</string>
    <string name="menu_time_frame">Schedule Start/End Times</string>
    <string name="res_credit">Cred: </string>
    <string name="res_sect">Sec: </string>
    <string name="res_seats">Seats Avail: </string>
    <string name="res_wl">Waitlisted: </string>
    <string name="res_wla">Wait Avail: </string>
    <string name="res_dates">Dates: </string>
    <string name="res_preq">Prequsites: </string>
    <string name="res_foc">Focus/GE: </string>
    <string name="menu_build">Go to Schedule Builder →</string>
    <string name="menu_refresh">Refresh Seating Data</string>
    <string name="menu_build_pref">Configure Schedule Profile</string>
    <string-array name="gefc_list">
        <item>(FGA) Foundation GMP-A</item>
        <item>(FGB) Foundation GMP-B</item>
        <item>(FGC) Foundation GMP-C</item>
        <item>(FS)  Foundation Symbolic Reasoning</item>
        <item>(FW)  Foundation Written Communication</item>
        <item>(DA)  Diversification-Arts</item>
        <item>(DB)  Diversification-Biological Science</item>
        <item>(DH)  Diversification-Humanities</item>
        <item>(DL)  Diversification-Literatures</item>
        <item>(DP)  Diversification-Physical Science</item>
        <item>(DS) Diversification-Social Science</item>
        <item>(DY)  Diversification-Laboratory (science)</item>
        <item>(HSL) Hawaiian or Second Language</item>
        <item>(NI)  Non-introductory Course</item>
        <item>(ETH) Contemporary Ethical Issues</item>
        <item>(HAP) Hawaiian, Asian, Pacific Issues</item>
        <item>(OC)  Oral Communication</item>
        <item>(WI)  Writing Intensive</item>
    </string-array>
    <string name="title_activity_builder">Add courses to Start!</string>
    <string name="title_activity_viewer">View Schedules</string>
    <string name="title_activity_visualize">Visualize</string>
    <string name="title_activity_create__schedules">Create_Schedules</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_available__schedules">Available Schedules</string>
    <string name="spin_default_profile">Default Profile</string>
    <string name="spin_select_profile">Select Profile</string>
    <string name="spin_new_profile">New profile...</string>
    <string name="btn_new_profile">New Profile</string>
    <string name="btn_delete_profile">Delete Profile</string>
    <string name="btn_remove_course">Remove Course</string>
    <string name="tv_add_profile_desc">Enter Profile Name</string>
    <string name="hint_profile_name">Profile name...</string>
    <string name="help_create_search">Search:</string>
    <string name="help_create_min_course">Set Minimum Course Count:</string>
    <string name="help_create_options">Configure Schedule Profile:</string>
    <string name="help_create_profiles">Selecting a Profile:</string>
    <string name="help_create_delete_profile">Delete Profile:</string>
    <string name="help_create_build">Build Schedules:</string>
    <string name="help_create_remove">Remove Course:</string>
    <string name="help_create_done">Done:</string>
    <string name="help_create_search_desc">Search for courses by either CRN or Course Name.</string>
    <string name="help_create_min_course_desc">Sets the minimum class count for schedules.  For example: if you have
        four classes to create schedules with and set the minimum class count to three, you will receive a list of
        possible schedules, some of which contain three classes, and, perhaps, some which contain four classes.</string>
    <string name="help_create_options_desc">Takes you to the \'Preferences\' screen to specify detailed options for
        creating schedules.</string>
    <string name="help_create_profiles_desc">Allows you to select a saved profile to use when creating schedules.  All
        preferences for that profile will be used when creating schedules.</string>
    <string name="help_create_delete_profile_desc">Deletes the selected profile and all of its options.  Cannot be undone.</string>
    <string name="help_create_build_desc">Creates all possible combinations of schedules from your selected courses.</string>
    <string name="help_create_remove_desc">Removes the selected course(s) from the list.</string>
    <string name="help_create_done_desc">Returns to the main menu.</string>
    <string name="help_search_search">Search:</string>
    <string name="help_search_show_by_major">Show Courses by Major:</string>
    <string name="help_search_clear">Clear Results:</string>
    <string name="help_search_focus">Gen Ed/Focus Filter:</string>
    <string name="help_search_time">Start/End Time Filter:</string>
    <string name="help_search_builder">Go to Schedule Builder:</string>
    <string name="help_search_refresh">Refresh Course Data:</string>
    <string name="help_search_major">Select a Major:</string>
    <string name="help_search_save_crn">Save CRN:</string>
    <string name="help_search_save_course">Save Course:</string>
    <string name="help_search_search_desc">Clicking on the search icon in the action bar will allow you to enter a course to search for.  You can search
        for a course by either its CRN, or the course name (i.e. EE 160).</string>
    <string name="help_search_show_by_major_desc">Shows courses for the selected major.</string>
    <string name="help_search_clear_desc">Clears the search results</string>
    <string name="help_search_focus_desc">Filter search results to courses meeting the selected gen ed/focus requirements.  For example: selecting
        Writing Intensive (WI) and selecting Electrical Engineering (EE) from the \'Select a Major\' spinner, followed by \'Show Courses by Major\'
        from the menu will show all classes in Electrical Engineering that satisfy the WI requirement.</string>
    <string name="help_search_time_desc">Allows you to specify your desired earliest start time and latest end time for classes without having to
        edit profile preferences.</string>
    <string name="help_search_builder_desc">Opens the \'Create Schedules\' screen.</string>
    <string name="help_search_refresh_desc">Reloads course data for the selected semester.  This will update the \'seats available\' field.</string>
    <string name="help_search_major_desc">Selecting a major from the list will narrow search results to only those in the selected major.</string>
    <string name="help_search_save_crn_desc">Saves the specific course that matches the CRN of the selected search result.  For example: if ENG 100
        with CRN 80826 is selected, the schedule builder will only use that specific ENG 100 course when making schedules.</string>
    <string name="help_search_save_course_desc">Saves the course (by name) of the selected search result.  For example: if ENG 100 is selected,
        the schedule builder will make all possible schedules for every ENG 100 CRN available.\n\nAll saved courses, whether by CRN or Course Name,
        can be viewed by sliding up or tapping on the \'Starred Items\' tab at the bottom of the screen. These starred items can be used in the
        \'Create Schedules\' screen.</string>
    <string name="help_preferences_profiles">Selecting a Profile:</string>
    <string name="help_preferences_delete_profile">Delete Profile:</string>
    <string name="help_preferences_days_off">Days Off:</string>
    <string name="help_preferences_times_off">Times Off:</string>
    <string name="help_preferences_start">Earliest Start Time:</string>
    <string name="help_preferences_end">Latest End Time:</string>
    <string name="help_preferences_show_help">Show Help Dialogs:</string>
    <string name="help_preferences_cancel">Cancel:</string>
    <string name="help_preferences_reset">Reset Settings:</string>
    <string name="help_preferences_save">Save Settings:</string>
    <string name="help_preferences_done">Done:</string>
    <string name="help_preferences_profiles_desc">Select the profile to edit or create a new profile.</string>
    <string name="help_preferences_delete_profile_desc">Delete the currently selected profile.  Cannot be undone.</string>
    <string name="help_preferences_days_off_desc">Specify days which you wish to not have classes.</string>
    <string name="help_preferences_times_off_desc">Specify times you wish to not have classes. You can also specify the
        individual days you wish this setting to apply to.</string>
    <string name="help_preferences_start_desc">The earliest time your first class may be.</string>
    <string name="help_preferences_end_desc">The latest time your last class may be.</string>
    <string name="help_preferences_show_help_desc">Select which screens you wish to see the help dialogs (like this one) for.</string>
    <string name="help_preferences_cancel_desc">Cancel the current changes.</string>
    <string name="help_preferences_reset_desc">Reset all values for the current profile.</string>
    <string name="help_preferences_save_desc">Save settings for the current profile.</string>
    <string name="help_preferences_done_desc">Return to the previous screen.</string>
</resources>