<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/help_preferences_profiles"
                style="@style/tvFeature"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_preferences_profiles_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_preferences_delete_profile"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_preferences_delete_profile_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_preferences_days_off"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_preferences_days_off_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_preferences_times_off"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_preferences_times_off_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_preferences_start"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_preferences_start_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_preferences_end"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_preferences_end_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_preferences_show_help"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_preferences_show_help_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_preferences_cancel"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_preferences_cancel_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_preferences_reset"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_preferences_reset_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_preferences_save"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_preferences_save_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_preferences_done"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_preferences_done_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkDontShow"
                style="@style/CheckBoxBasic"
                android:text="@string/dialog_do_not_show"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>