<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/help_search_search"
                style="@style/tvFeature"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_search_search_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_search_show_by_major"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_search_show_by_major_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_search_clear"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_search_clear_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_search_focus"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_search_focus_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_search_time"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_search_time_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_search_builder"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_search_builder_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_search_refresh"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_search_refresh_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />


            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_search_major"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_search_major_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_search_save_crn"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_search_save_crn_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_search_save_course"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_search_save_course_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkDontShow"
                style="@style/CheckBoxBasic"
                android:text="@string/dialog_do_not_show"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>