<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/help_create_search"
                style="@style/tvFeature"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_create_search_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_create_min_course"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_create_min_course_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_create_options"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_create_options_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_create_profiles"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_create_profiles_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_create_delete_profile"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_create_delete_profile_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_create_build"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_create_build_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_create_remove"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_create_remove_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeature"
                android:text="@string/help_create_done"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/tvFeatureDescription"
                android:text="@string/help_create_done_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_rectangle_spacer_green"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkDontShow"
                style="@style/CheckBoxBasic"
                android:text="@string/dialog_do_not_show"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>